CloudWatch Logs Insights : Results Table (#1979)
* Results tab opens

* String parsing done

* Query Results

* ColumnInfo updated

* ResultsTable

* Column Info upated

* Results Table

* Display results table after complete query executed

* Results table without tests

* Results table with tests

* Accepted fields change

* List of Result Fields mapped

* Messages updated

* Mutable components converted to Immutable

* Opens Query Editor from Results Table

* Open Query Editor updated

* Updated Query EditorDialog

* Query Editor Dialog Parameter name changed

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -216,6 +216,7 @@ cloudwatch.logs.no_log_streams=No Log Stream found
 cloudwatch.logs.no_query_entered=Query must be specified
 cloudwatch.logs.no_query_selected=Either a query or search term must be entered
 cloudwatch.logs.no_relative_time_number=Number must be specified
+cloudwatch.logs.no_results_found=No results found
 cloudwatch.logs.no_start_date=Start Date must be specified
 cloudwatch.logs.no_term_entered=Search Term must be specified
 cloudwatch.logs.open=View Log Streams
@@ -227,7 +228,12 @@ cloudwatch.logs.query.form.ok_Button=Execute
 cloudwatch.logs.query_editor_title=Query Log Groups
 cloudwatch.logs.query_name=Query name is missing
 cloudwatch.logs.query_not_saved=Query could not be saved. Try saving with a different name.
+cloudwatch.logs.query_result=Query Results
+cloudwatch.logs.query_result_completion_status=Result
+cloudwatch.logs.query_result_completion_successful=Query Execution Completed
+cloudwatch.logs.query_results_table_error=Failed to load Query Results
 cloudwatch.logs.query_saved_successfully=Query has been saved to your account!
+cloudwatch.logs.results_window_title=CloudWatch Logs Insights
 cloudwatch.logs.save_action=Save to a File
 cloudwatch.logs.save_query=Save Query
 cloudwatch.logs.save_query_dialog_name=Enter Query Name
