--- a/package.json
+++ b/package.json
@@ -1080,6 +1080,7 @@
         "ts-loader": "^6.2.0",
         "ts-mockito": "^2.5.0",
         "ts-node": "^8.5.2",
+        "tslint": "^6.1.3",
         "vsce": "^1.69.0",
         "vscode-nls-dev": "^3.3.1",
         "vscode-test": "^1.4.0",
