--- a/package.json
+++ b/package.json
@@ -478,7 +478,15 @@
                     "when": "false"
                 },
                 {
-                    "command": "aws.ssmDocument.openLocalDocument",
+                    "command": "aws.copyLogStreamName",
+                    "when": "resourceScheme == awsCloudWatchLogs"
+                },
+                {
+                    "command": "aws.saveCurrentLogStreamContent",
+                    "when": "resourceScheme == awsCloudWatchLogs"
+                },
+                {
+                    "command": "aws.cloudWatchLogs.viewLogStream",
                     "when": "false"
                 },
                 {
@@ -519,6 +527,18 @@
                     "command": "aws.previewStateMachine",
                     "when": "editorLangId == asl",
                     "group": "navigation"
+                },
+                {
+                    "command": "aws.saveCurrentLogStreamContent",
+                    "when": "resourceScheme == awsCloudWatchLogs",
+                    "group": "navigation"
+                }
+            ],
+            "editor/title/context": [
+                {
+                    "command": "aws.copyLogStreamName",
+                    "when": "resourceScheme == awsCloudWatchLogs",
+                    "group": "1_cutcopypaste@1"
                 }
             ],
             "view/title": [
@@ -981,14 +1001,16 @@
                 "category": "AWS"
             },
             {
-                "command": "aws.ssmDocument.createLocalDocument",
-                "title": "%AWS.command.ssmDocument.createLocalDocument%",
-                "category": "AWS"
+                "command": "aws.copyLogStreamName",
+                "title": "%AWS.command.copyLogStreamName%",
+                "category": "AWS",
+                "icon": "$(files)"
             },
             {
-                "command": "aws.ssmDocument.openLocalDocument",
-                "title": "%AWS.command.ssmDocument.openLocalDocument%",
-                "category": "AWS"
+                "command": "aws.saveCurrentLogStreamContent",
+                "title": "%AWS.command.saveCurrentLogStreamContent%",
+                "category": "AWS",
+                "icon": "$(save-as)"
             }
         ],
         "jsonValidation": [
@@ -1055,6 +1077,15 @@
                 "language": "ssm-yaml",
                 "scopeName": "source.ssmyaml",
                 "path": "./syntaxes/SSMYAML.tmLanguage"
+            }
+        ],
+        "resourceLabelFormatters": [
+            {
+                "scheme": "awsCloudWatchLogs",
+                "formatting": {
+                    "label": "${path}",
+                    "separator": "\\"
+                }
             }
         ]
     },
