--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -735,7 +735,7 @@ sqs.message.validation.long.id=ID exceeds the maximum length of 128 characters.
 sqs.messages.available.text=Messages Available:
 sqs.poll.message=Poll for Messages
 sqs.poll.warning.text=<html><b>To view messages in the queue, poll for messages.</b><p>Once polled, the sample of messages remain in the queue and are not returned to subsequent receive requests for the duration of the visibility timeout.</p></html>
-sqs.queue.name.tooltip=<html><p>A queue name is case-sensitive and can have up to 80 characters of alphanumeric characters, hyphens (-), and underscores ( _ ). </p><p>If FIFO is selected, '.fifo' will be appended to the specified name if it does not already exist.</p></html>
+sqs.queue.name.tooltip=<html><p>A queue name is case-sensitive and can have up to 80 characters of alphanumeric characters, hyphens (-), and underscores ( _ ). </p><p>If FIFO is selected, '.fifo' will be appended to the specified name.</p></html>
 sqs.queue.polled.messages=Polled Messages
 sqs.required.empty.text=(Required)
 sqs.send.message=Send a Message
