--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,7 +23,7 @@
             "request": "attach",
             "port": 6009,
             "restart": true,
-            "outFiles": ["${workspaceRoot}/dist/src/stepFunctions/amazonStatesLanguage/server.js"]
+            "outFiles": ["${workspaceRoot}/dist/src/stepFunctions/asl/**.js"]
         },
         {
             "name": "Extension (webpack)",
