--- a/package.json
+++ b/package.json
@@ -1133,7 +1133,6 @@
         "mocha": "^7.1.1",
         "mocha-junit-reporter": "^1.23.3",
         "mocha-multi-reporters": "^1.1.7",
-        "prettier": "^1.19.1",
         "pretty-quick": "^1.10.0",
         "readline-sync": "^1.4.9",
         "remap-istanbul": "^0.12.0",
@@ -1163,12 +1162,13 @@
         "handlebars": "^4.7.6",
         "immutable": "^4.0.0-rc.12",
         "js-yaml": "^3.13.1",
-        "jsonc-parser": "^2.0.2",
+        "jsonc-parser": "2.2.1",
         "lodash": "^4.17.19",
         "mime-types": "^2.1.27",
         "moment": "^2.24.0",
         "original-fs": "^1.1.0",
         "portfinder": "^1.0.25",
+        "prettier": "^1.19.1",
         "request": "^2.88.0",
         "semver": "^5.6.0",
         "sleep-promise": "^8.0.1",
@@ -1177,7 +1177,7 @@
         "triple-beam": "^1.3.0",
         "typescript": "^3.7.2",
         "uuid": "^3.3.2",
-        "vscode-json-languageservice": "3.8.1",
+        "vscode-json-languageservice": "^3.4.9",
         "vscode-languageclient": "^6.1.1",
         "vscode-languageserver": "^6.1.1",
         "vscode-languageserver-textdocument": "^1.0.1",
@@ -1187,7 +1187,7 @@
         "winston-transport": "^4.3.0",
         "xml2js": "^0.4.19",
         "yaml": "^1.9.2",
-        "yaml-language-server": "0.9.0"
+        "yaml-language-server": "0.10.0"
     },
     "prettier": {
         "printWidth": 120,
