Add a non function resource to test templates

--- a/src/testFixtures/workspaceFolder/python3.7-plain-sam-app/template.yaml
+++ b/src/testFixtures/workspaceFolder/python3.7-plain-sam-app/template.yaml
@@ -23,6 +23,10 @@ Resources:
                     Properties:
                         Path: /hello
                         Method: get
+    ServerlessApi:
+        Type: AWS::Serverless::Api
+        Properties:
+            Name: ResourceName
 
 Outputs:
     # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
