Fix the CloudWatch Logs table breaking when the service returns an ex… (#2017)

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -196,7 +196,9 @@ cloudwatch.logs.copy_action=Copy {0, choice, 1#message|2#messages}
 cloudwatch.logs.delete_log_group=Delete Log Group
 cloudwatch.logs.download=Download Log Stream
 cloudwatch.logs.download.description=Select a folder to save the Log Stream to
+cloudwatch.logs.exception=CloudWatch Logs Exception
 cloudwatch.logs.export=Export Log Stream
+cloudwatch.logs.failed_to_load_more=Failed to load more
 cloudwatch.logs.failed_to_load_stream=Failed to load log stream {0}
 cloudwatch.logs.failed_to_load_streams=Failed to load log streams for log group {0}
 cloudwatch.logs.filter_loggroup=Filter streams
