--- a/package.json
+++ b/package.json
@@ -437,6 +437,10 @@
                     "when": "false"
                 },
                 {
+                    "command": "aws.importLambda",
+                    "when": "false"
+                },
+                {
                     "command": "aws.invokeLambda",
                     "when": "false"
                 },
@@ -637,13 +641,18 @@
                 },
                 {
                     "command": "aws.invokeLambda",
-                    "when": "view == aws.explorer && viewItem =~ /^(awsRegionFunctionNode|awsCloudFormationFunctionNode)$/",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsRegionFunctionNode|awsRegionFunctionNodeImportable|awsCloudFormationFunctionNode)$/",
                     "group": "0@1"
                 },
                 {
+                    "command": "aws.importLambda",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsRegionFunctionNode|awsRegionFunctionNodeImportable)$/",
+                    "group": "0@2"
+                },
+                {
                     "command": "aws.deleteLambda",
-                    "when": "view == aws.explorer && viewItem == awsRegionFunctionNode",
-                    "group": "2@1"
+                    "when": "view == aws.explorer && viewItem =~ /^(awsRegionFunctionNode|awsRegionFunctionNodeImportable)$/",
+                    "group": "4@1"
                 },
                 {
                     "command": "aws.deleteCloudFormation",
@@ -702,12 +711,12 @@
                 },
                 {
                     "command": "aws.copyName",
-                    "when": "view == aws.explorer && viewItem =~ /^(awsRegionFunctionNode|awsCloudFormationFunctionNode|awsStateMachineNode|awsCloudFormationNode|awsS3BucketNode|awsS3FolderNode|awsS3FileNode)$/",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsRegionFunctionNode|awsRegionFunctionNodeImportable|awsCloudFormationFunctionNode|awsStateMachineNode|awsCloudFormationNode|awsS3BucketNode|awsS3FolderNode|awsS3FileNode)$/",
                     "group": "2@1"
                 },
                 {
                     "command": "aws.copyArn",
-                    "when": "view == aws.explorer && viewItem =~ /^(awsRegionFunctionNode|awsCloudFormationFunctionNode|awsStateMachineNode|awsCloudFormationNode|awsS3BucketNode|awsS3FolderNode|awsS3FileNode)$/",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsRegionFunctionNode|awsRegionFunctionNodeImportable|awsCloudFormationFunctionNode|awsStateMachineNode|awsCloudFormationNode|awsCloudWatchLogNode|awsS3BucketNode|awsS3FolderNode|awsS3FileNode)$/",
                     "group": "2@2"
                 },
                 {
@@ -844,6 +853,12 @@
                 "command": "aws.invokeLambda",
                 "title": "%AWS.command.invokeLambda%",
                 "category": "AWS"
+            },
+            {
+                "command": "aws.importLambda",
+                "title": "%AWS.command.importLambda%",
+                "category": "AWS",
+                "enablement": "viewItem == awsRegionFunctionNodeImportable"
             },
             {
                 "command": "aws.deleteLambda",
@@ -1073,7 +1088,7 @@
         "createRelease": "ts-node ./build-scripts/createRelease.ts"
     },
     "devDependencies": {
-        "@aws-toolkits/telemetry": "0.0.30",
+        "@aws-toolkits/telemetry": "0.0.40",
         "@types/adm-zip": "^0.4.32",
         "@types/async-lock": "^1.1.0",
         "@types/bytes": "^3.1.0",
